--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descripción breve de la página">
+    <meta name="keywords" content="Redes de computadoras, Tipos de redes, Funcionamiento de redes">
     <title>Prueba Formativa - Tipos de Redes de Computadoras</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="menu container">
@@ -15,79 +19,159 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="Formulario Topologia de redes.html">Formulario de redes de computadora</a></li>
-                    <li><a href="Funcionamiento de las redes.html">Funcionamiento de las redes de computadora</a></li>
+                    <li><a href="#funcionamiento">Funcionamiento de las redes de computadora</a></li>
+                    <li><a href="#tipos">Tipos de redes de computadoras</a></li>
                 </ul>
             </nav>
         </div>
 
         <center>
-            <h1>Red de computadoras</h1>      
+            <h1>Red de computadoras</h1>
         </center>
-           
-        <div class="paragraph-container">
-            <p class="paragraph paragraph1">Una red informática, una red de comunicaciones de datos o una red de computadoras es la interconexión de distinto número de sistemas informáticos a través de una serie de dispositivos de telecomunicaciones y un medio físico (alámbrico o inalámbrico).</p>
-            <div class="separator separator1"></div>
 
-            <p class="paragraph paragraph2">Su función es compartir información en paquetes de datos. Los mismos se transmiten mediante impulsos eléctricos, ondas electromagnéticas u otros medios, empleando una codificación especial.</p>
-            <div class="separator separator2"></div>
+        <main>
+            <article>
+                <section id="introduccion">
+                    <div class="paragraph-container">
+                        <p class="paragraph paragraph1">Una red informática, una red de comunicaciones de datos o una red de computadoras es la interconexión de distinto número de sistemas informáticos a través de una serie de dispositivos de telecomunicaciones y un medio físico (alámbrico o inalámbrico).</p>
+                        <div class="separator separator1"></div>
 
-            <p class="paragraph paragraph3">Para ello, el sistema traduce a un mismo idioma los procesos de las distintas computadoras, a través de una serie de estándares de comunicación. Las redes de computadoras no son distintas, en su lógica de intercambio, de otros procesos comunicativos: poseen un emisor, un receptor y un mensaje, un medio a través del cual transmitir el mensaje y una serie de códigos o protocolos para garantizar su correcta comprensión. Solo que, en este caso, quienes envían y reciben mensajes son computadoras.</p>
-            <div class="separator separator3"></div>
+                        <p class="paragraph paragraph2">Su función es compartir información en paquetes de datos. Los mismos se transmiten mediante impulsos eléctricos, ondas electromagnéticas u otros medios, empleando una codificación especial.</p>
+                        <div class="separator separator2"></div>
 
-            <h3>Funcionamiento de las redes de computadora</h3>
-            <p class="paragraph paragraph4">La red de computadoras permite compartir recursos a distancia, aumenta la velocidad de la transmisión de datos (es más rápido acceder a un archivo por una red que a través de Internet, por ejemplo) e incrementa la confiabilidad. Las computadoras pueden estar interconectadas mediante cable coaxial (que transporta los datos a través de dos conductores concéntricos), cable de par trenzado (los dos conductores concéntricos están entrelazados para reducir las interferencias) o fibra óptica (un hilo muy fino por el que fluyen los pulsos de luz con la información a transmitir).</p>
-            <div class="separator separator4"></div>
+                        <p class="paragraph paragraph3">Para ello, el sistema traduce a un mismo idioma los procesos de las distintas computadoras, a través de una serie de estándares de comunicación. Las redes de computadoras no son distintas, en su lógica de intercambio, de otros procesos comunicativos: poseen un emisor, un receptor y un mensaje, un medio a través del cual transmitir el mensaje y una serie de códigos o protocolos para garantizar su correcta comprensión. Solo que, en este caso, quienes envían y reciben mensajes son computadoras.</p>
+                        <div class="separator separator3"></div>
+                    </div>
+                </section>
 
-            <h3>Tipos de redes de computadoras</h3>
-            <ul class="list">
-                <li class="list-item">Redes LAN. Su nombre proviene de Local Area Network (en inglés: “Red de Área Local”), pues son las redes de menor tamaño y extensión, como las que pueden existir entre los computadores de un mismo locutorio o ciber café.</li>
-            </ul>
-            <center><img src="Red LAN.jpg" width="200" height="200" alt="Red LAN"></center>
-            <div class="separator separator5"></div>
+                <section id="funcionamiento">
+                    <div class="paragraph-container">
+                        <h3>Funcionamiento de las redes de computadora</h3>
+                        <p class="paragraph paragraph4">La red de computadoras permite compartir recursos a distancia, aumenta la velocidad de la transmisión de datos (es más rápido acceder a un archivo por una red que a través de Internet, por ejemplo) e incrementa la confiabilidad. Las computadoras pueden estar interconectadas mediante cable coaxial (que transporta los datos a través de dos conductores concéntricos), cable de par trenzado (los dos conductores concéntricos están entrelazados para reducir las interferencias) o fibra óptica (un hilo muy fino por el que fluyen los pulsos de luz con la información a transmitir).</p>
+                        <p class="paragraph paragraph5">Además, el funcionamiento eficiente de una red depende de diversos elementos clave, como routers, switches, y un cableado estructurado que garantice la conectividad y la transmisión de datos de manera efectiva.</p>
+                        <div class="separator separator4"></div>
+                    </div>
+                </section>
 
-            <!-- Resto del contenido -->
+                <section id="tipos">
+                    <div class="paragraph-container">
+                        <h3>Tipos de redes de computadoras</h3>
+                        <ul class="list">
+                            <li class="list-item">Redes LAN. Su nombre proviene de Local Area Network (en inglés: “Red de Área Local”), pues son las redes de menor tamaño y extensión, como las que pueden existir entre los computadores de un mismo locutorio o ciber café.</li>
+                            <center><figure>
+                                <img src="Red LAN.jpg" width="200" height="200" alt="Red LAN">
+                                <figcaption>Red de Área Local (LAN)</figcaption>
+                            </figure></center>
+                            <li class="list-item">Red de Área Personal (PAN). Una red de área personal es útil para una única persona, con una distancia máxima entre los nodos de aproximadamente 1 metro.</li>
+                            <center><figure>
+                                <img src="PAN.jpg" width="200" height="200" alt="Red PAN">
+                                <figcaption>Red de Área Personal (PAN)</figcaption>
+                            </figure></center>
+                            <li class="list-item">Red de Área Amplia (WAN). Se utiliza para vincular redes LAN que están separadas por distancias significativas, pudiendo abarcar de 100 a 1000 kilómetros.</li>
+                            <center><figure>
+                                <img src="WAN.jpg" width="200" height="200" alt="Red WAN">
+                                <figcaption>Red de Área Amplia (WAN)</figcaption>
+                            </figure></center>
+                            <li class="list-item">Red de Área Metropolitana (MAN). Funciona como una red WAN, pero para una zona geográfica determinada.</li>
+                            <center><figure>
+                                <img src="MAN.jpg" width="200" height="200" alt="Red MAN">
+                                <figcaption>Red de Área Metropolitana (MAN)</figcaption>
+                            </figure></center>
+                            <li class="list-item">Red de Área Global (GAN). Se utiliza para vincular redes WAN a nivel global.</li>
+                            <center><figure>
+                                <img src="GAN.jpg" width="200" height="200" alt="Red GAN">
+                                <figcaption>Red de Área Global (GAN)</figcaption>
+                            </figure></center>
+                            <li class="list-item">Red Privada Virtual (VPN). Permite la extensión segura de una red física a través de una red pública, como Internet.</li>
+                            <center><figure>
+                                <img src="VPN.jpg" width="200" height="200" alt="Red VPN">
+                                <figcaption>Red Privada Virtual (VPN)</figcaption>
+                            </figure></center>
+                        </ul>
+                        <div class="separator separator5"></div>
+                    </div>
+                </section>
 
-            <h3>Elementos básicos de una red de computadoras</h3>
-            <ul>
-                <li>Servidor. Las computadoras de una red no poseen la misma jerarquía, ni desempeñan las mismas funciones. Por ejemplo, los servidores son los encargados de procesar el flujo de datos de la red, atendiendo a todas las demás computadoras conectadas (es decir, “sirviéndolos”) y centralizando el control de la red en sí misma.</li>
-                <center><img src="servidor.jpg" width="200" height="200"></center>
-                <li>Clientes o estaciones de trabajo. Estas son las computadoras que no sirven a las demás, sino que forman parte de la red y brindan acceso a la misma, solicitando los recursos administrados por el servidor.</li>
-                <center><img src="estacion de trabajo.jpg" width="200" height="200"></center>
-                <!-- Agrega más elementos según sea necesario -->
-            </ul>
+                <section id="elementos">
+                    <h3>Elementos básicos de una red de computadoras</h3>
+                    <ul>
+                        <li>Servidor. Las computadoras de una red no poseen la misma jerarquía, ni desempeñan las mismas funciones. Por ejemplo, los servidores son los encargados de procesar el flujo de datos de la red, atendiendo a todas las demás computadoras conectadas (es decir, “sirviéndolos”) y centralizando el control de la red en sí misma.</li>
+                        <center><figure>
+                            <img src="servidor.jpg" width="200" height="200" alt="Servidor">
+                            <figcaption>Servidor</figcaption>
+                        </figure></center>
+                        <li>Clientes o estaciones de trabajo. Estas son las computadoras que no sirven a las demás, sino que forman parte de la red y brindan acceso a la misma, solicitando los recursos administrados por el servidor.</li>
+                        <center><figure>
+                            <img src="estacion de trabajo.jpg" width="200" height="200" alt="Estación de trabajo">
+                            <figcaption>Estación de Trabajo</figcaption>
+                        </figure></center>
+                        <li>Router. Un router es un dispositivo que interconecta redes informáticas, facilitando el enrutamiento de datos entre ellas. Es esencial para la comunicación entre redes y puede proporcionar funciones de cortafuegos, gestión de ancho de banda, etc.</li>
+                        <center><figure>
+                            <img src="router.jpg" width="200" height="200" alt="Router">
+                            <figcaption>Router</figcaption>
+                        </figure></center>
+                        <li>Switch. Un switch es un dispositivo de red que opera en la capa de enlace de datos del modelo OSI. Se utiliza para conectar varios dispositivos en una red y facilita la comunicación directa entre ellos, optimizando el rendimiento de la red.</li>
+                        <center><figure>
+                            <img src="switch.jpg" width="200" height="200" alt="Switch">
+                            <figcaption>Switch</figcaption>
+                        </figure></center>
+                        <li>Cableado Estructurado. El cableado estructurado es un sistema integral de cables, conectores y dispositivos que permite la transmisión de datos y voz en una infraestructura de telecomunicaciones. Es fundamental para la conectividad y el funcionamiento de una red.</li>
+                        <center><figure>
+                            <img src="cableado.jpg" width="200" height="200" alt="Cableado Estructurado">
+                            <figcaption>Cableado Estructurado</figcaption>
+                        </figure></center>
+                    </ul>
+                </section>
 
-            <!-- Puedes continuar con el resto del contenido del segundo código -->
+                <section id="ventajas">
+                    <h3>Ventajas de una red de computadoras</h3>
+                    <p>Las redes de computadoras ofrecen diversas ventajas, entre las cuales se incluyen:</p>
+                    <ul>
+                        <li>Compartir recursos: Facilita el intercambio de archivos y recursos entre diferentes dispositivos conectados a la red.</li>
+                        <li>Acceso remoto: Permite acceder a recursos y datos de la red desde ubicaciones remotas, proporcionando flexibilidad a los usuarios.</li>
+                        <li>Comunicación eficiente: Facilita la comunicación instantánea y efectiva entre usuarios de la red, mejorando la colaboración.</li>
+                        <li>Centralización de datos: Los servidores centralizan la gestión de datos, facilitando la administración y respaldo de información.</li>
+                        <li>Mayor velocidad: La transmisión de datos dentro de una red es más rápida que a través de otros medios, como Internet público.</li>
+                    </ul>
+                </section>
 
-            <h3>Desventajas de una red de computadoras</h3>
-            <ul>
-                <li>El lado débil de una red de computadoras tiene que ver con los ataques cibernéticos, que vulneran la confidencialidad de la información y pueden dar pie a peligrosas actividades.</li>
-                <li>Hablamos tanto de software malicioso (virus, adware, etc.) o de ciberterroristas (hackers), cuyos ataques pueden ocasionar pérdidas de información (y por lo tanto de capitales), violaciones a la intimidad o daños a equipos y al software. El mundo de las redes es diverso y complejo.</li>
-            </ul>
+                <section id="desventajas">
+                    <h3>Desventajas de una red de computadoras</h3>
+                    <ul>
+                        <li>El lado débil de una red de computadoras tiene que ver con los ataques cibernéticos, que vulneran la confidencialidad de la información y pueden dar pie a peligrosas actividades.</li>
+                        <li>Hablamos tanto de software malicioso (virus, adware, etc.) o de ciberterroristas (hackers), cuyos ataques pueden ocasionar pérdidas de información (y por lo tanto de capitales), violaciones a la intimidad o daños a equipos y al software. El mundo de las redes es diverso y complejo.</li>
+                    </ul>
+                </section>
 
-            <h3>Ejemplos de redes de computadoras</h3>
-            <ul>
-                <li>Una red doméstica. Como las redes de WiFi que cualquier persona puede instalar en su propio hogar, para así atender a un par de computadoras y/o de teléfonos celulares. Su alcance apenas excederá los márgenes del departamento.</li>
-                <!-- Agrega más ejemplos según sea necesario -->
-            </ul>
+                <section id="ejemplos">
+                    <h3>Ejemplos de redes de computadoras</h3>
+                    <ul>
+                        <li>Una red doméstica. Como las redes de WiFi que cualquier persona puede instalar en su propio hogar, para así atender a un par de computadoras y/o de teléfonos celulares. Su alcance apenas excederá los márgenes del departamento.</li>
+                    </ul>
+                </section>
 
-            <center><video width="520" height="440" controls>
-                <source src="Redes 1.mp4" type="video/mp4">
-            </video></center>
-            <br>
-            <br>
-            <a href="https://www.tokioschool.com/noticias/historia-evolucion-redes-informaticas/">Evolucion de las redes de computadoras</a>
-            <br>
-            <br>
-            <audio controls>
-                <source src="AudioWeb.mp3" type="audio/mp3">
-                Su navegador no soporta audio
-            </audio>
-            <br>
-            <h4>Referencias</h4>
-            <ul>
-                <li>Red de computadoras - concepto, componentes, tipos y ejemplos. (s. f.). Concepto. <a href="https://concepto.de/red-de-computadoras/">https://concepto.de/red-de-computadoras/</a></li>
-            </ul>
-        </div>
+                <center><figure>
+                    <video width="520" height="440" controls>
+                        <source src="Redes 1.mp4" type="video/mp4">
+                    </video>
+                    <figcaption>Video sobre Redes de Computadoras</figcaption>
+                </figure></center>
+                <br>
+                <br>
+                <a href="https://www.tokioschool.com/noticias/historia-evolucion-redes-informaticas/">Evolucion de las redes de computadoras</a>
+                <br>
+                <br>
+                <audio controls>
+                    <source src="AudioWeb.mp3" type="audio/mp3">
+                    Su navegador no soporta audio
+                </audio>
+                <br>
+                <h4>Referencias</h4>
+                <ul>
+                    <li>Red de computadoras - concepto, componentes, tipos y ejemplos. (s. f.). Concepto. <a href="https://concepto.de/red-de-computadoras/">https://concepto.de/red-de-computadoras/</a></li>
+                </ul>
+            </article>
+        </main>
     </header>
 </body>
 </html>
