--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="Formulario Topologia de redes.html">Formulario de redes de computadora</a></li>
-                    <li><a href="Funcionamiento de las redes.html">Funcionamiento de las redes de computadora</a></li>
+                    <li><a href="#funcionamiento">Funcionamiento de las redes de computadora</a></li>
                     <li><a href="#tipos">Tipos de redes de computadoras</a></li>
                 </ul>
             </nav>
