--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -18,16 +18,14 @@
             <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="Formulario Topologia de redes.html">Formulario de redes de computadora</a></li>
-                    <li><a href="Funcionamiento de las redes.html">Funcionamiento de las redes de computadora</a></li>
+                    <li><a href="Formulario_Topologia_de_redes.html">Formulario de redes de computadora</a></li>
+                    <li><a href="Funcionamiento_de_las_redes.html">Funcionamiento de las redes de computadora</a></li>
                     <li><a href="#tipos">Tipos de redes de computadoras</a></li>
                 </ul>
             </nav>
         </div>
 
-        <center>
-            <h1>Red de computadoras</h1>
-        </center>
+        <h1 style="text-align: center;">Red de computadoras</h1>
 
         <main>
             <article>
@@ -58,35 +56,47 @@
                         <h3>Tipos de redes de computadoras</h3>
                         <ul class="list">
                             <li class="list-item">Redes LAN. Su nombre proviene de Local Area Network (en inglés: “Red de Área Local”), pues son las redes de menor tamaño y extensión, como las que pueden existir entre los computadores de un mismo locutorio o ciber café.</li>
-                            <center><figure>
-                                <img src="Red LAN.jpg" width="200" height="200" alt="Red LAN">
-                                <figcaption>Red de Área Local (LAN)</figcaption>
-                            </figure></center>
+                            <div style="text-align: center;">
+                                <figure>
+                                    <img src="Red_LAN.jpg" width="200" height="200" alt="Red LAN">
+                                    <figcaption>Red de Área Local (LAN)</figcaption>
+                                </figure>
+                            </div>
                             <li class="list-item">Red de Área Personal (PAN). Una red de área personal es útil para una única persona, con una distancia máxima entre los nodos de aproximadamente 1 metro.</li>
-                            <center><figure>
-                                <img src="PAN.jpg" width="200" height="200" alt="Red PAN">
-                                <figcaption>Red de Área Personal (PAN)</figcaption>
-                            </figure></center>
+                            <div style="text-align: center;">
+                                <figure>
+                                    <img src="PAN.jpg" width="200" height="200" alt="Red PAN">
+                                    <figcaption>Red de Área Personal (PAN)</figcaption>
+                                </figure>
+                            </div>
                             <li class="list-item">Red de Área Amplia (WAN). Se utiliza para vincular redes LAN que están separadas por distancias significativas, pudiendo abarcar de 100 a 1000 kilómetros.</li>
-                            <center><figure>
-                                <img src="WAN.jpg" width="200" height="200" alt="Red WAN">
-                                <figcaption>Red de Área Amplia (WAN)</figcaption>
-                            </figure></center>
+                            <div style="text-align: center;">
+                                <figure>
+                                    <img src="WAN.jpg" width="200" height="200" alt="Red WAN">
+                                    <figcaption>Red de Área Amplia (WAN)</figcaption>
+                                </figure>
+                            </div>
                             <li class="list-item">Red de Área Metropolitana (MAN). Funciona como una red WAN, pero para una zona geográfica determinada.</li>
-                            <center><figure>
-                                <img src="MAN.jpg" width="200" height="200" alt="Red MAN">
-                                <figcaption>Red de Área Metropolitana (MAN)</figcaption>
-                            </figure></center>
+                            <div style="text-align: center;">
+                                <figure>
+                                    <img src="MAN.jpg" width="200" height="200" alt="Red MAN">
+                                    <figcaption>Red de Área Metropolitana (MAN)</figcaption>
+                                </figure>
+                            </div>
                             <li class="list-item">Red de Área Global (GAN). Se utiliza para vincular redes WAN a nivel global.</li>
-                            <center><figure>
-                                <img src="GAN.jpg" width="200" height="200" alt="Red GAN">
-                                <figcaption>Red de Área Global (GAN)</figcaption>
-                            </figure></center>
+                            <div style="text-align: center;">
+                                <figure>
+                                    <img src="GAN.jpg" width="200" height="200" alt="Red GAN">
+                                    <figcaption>Red de Área Global (GAN)</figcaption>
+                                </figure>
+                            </div>
                             <li class="list-item">Red Privada Virtual (VPN). Permite la extensión segura de una red física a través de una red pública, como Internet.</li>
-                            <center><figure>
-                                <img src="VPN.jpg" width="200" height="200" alt="Red VPN">
-                                <figcaption>Red Privada Virtual (VPN)</figcaption>
-                            </figure></center>
+                            <div style="text-align: center;">
+                                <figure>
+                                    <img src="VPN.jpg" width="200" height="200" alt="Red VPN">
+                                    <figcaption>Red Privada Virtual (VPN)</figcaption>
+                                </figure>
+                            </div>
                         </ul>
                         <div class="separator separator5"></div>
                     </div>
@@ -96,30 +106,40 @@
                     <h3>Elementos básicos de una red de computadoras</h3>
                     <ul>
                         <li>Servidor. Las computadoras de una red no poseen la misma jerarquía, ni desempeñan las mismas funciones. Por ejemplo, los servidores son los encargados de procesar el flujo de datos de la red, atendiendo a todas las demás computadoras conectadas (es decir, “sirviéndolos”) y centralizando el control de la red en sí misma.</li>
-                        <center><figure>
-                            <img src="servidor.jpg" width="200" height="200" alt="Servidor">
-                            <figcaption>Servidor</figcaption>
-                        </figure></center>
+                        <div style="text-align: center;">
+                            <figure>
+                                <img src="servidor.jpg" width="200" height="200" alt="Servidor">
+                                <figcaption>Servidor</figcaption>
+                            </figure>
+                        </div>
                         <li>Clientes o estaciones de trabajo. Estas son las computadoras que no sirven a las demás, sino que forman parte de la red y brindan acceso a la misma, solicitando los recursos administrados por el servidor.</li>
-                        <center><figure>
-                            <img src="estacion de trabajo.jpg" width="200" height="200" alt="Estación de trabajo">
-                            <figcaption>Estación de Trabajo</figcaption>
-                        </figure></center>
+                        <div style="text-align: center;">
+                            <figure>
+                                <img src="estacion_de_trabajo.jpg" width="200" height="200" alt="Estación de Trabajo">
+                                <figcaption>Estación de Trabajo</figcaption>
+                            </figure>
+                        </div>
                         <li>Router. Un router es un dispositivo que interconecta redes informáticas, facilitando el enrutamiento de datos entre ellas. Es esencial para la comunicación entre redes y puede proporcionar funciones de cortafuegos, gestión de ancho de banda, etc.</li>
-                        <center><figure>
-                            <img src="router.jpg" width="200" height="200" alt="Router">
-                            <figcaption>Router</figcaption>
-                        </figure></center>
+                        <div style="text-align: center;">
+                            <figure>
+                                <img src="router.jpg" width="200" height="200" alt="Router">
+                                <figcaption>Router</figcaption>
+                            </figure>
+                        </div>
                         <li>Switch. Un switch es un dispositivo de red que opera en la capa de enlace de datos del modelo OSI. Se utiliza para conectar varios dispositivos en una red y facilita la comunicación directa entre ellos, optimizando el rendimiento de la red.</li>
-                        <center><figure>
-                            <img src="switch.jpg" width="200" height="200" alt="Switch">
-                            <figcaption>Switch</figcaption>
-                        </figure></center>
+                        <div style="text-align: center;">
+                            <figure>
+                                <img src="switch.jpg" width="200" height="200" alt="Switch">
+                                <figcaption>Switch</figcaption>
+                            </figure>
+                        </div>
                         <li>Cableado Estructurado. El cableado estructurado es un sistema integral de cables, conectores y dispositivos que permite la transmisión de datos y voz en una infraestructura de telecomunicaciones. Es fundamental para la conectividad y el funcionamiento de una red.</li>
-                        <center><figure>
-                            <img src="cableado.jpg" width="200" height="200" alt="Cableado Estructurado">
-                            <figcaption>Cableado Estructurado</figcaption>
-                        </figure></center>
+                        <div style="text-align: center;">
+                            <figure>
+                                <img src="cableado.jpg" width="200" height="200" alt="Cableado Estructurado">
+                                <figcaption>Cableado Estructurado</figcaption>
+                            </figure>
+                        </div>
                     </ul>
                 </section>
 
@@ -150,12 +170,14 @@
                     </ul>
                 </section>
 
-                <center><figure>
-                    <video width="520" height="440" controls>
-                        <source src="Redes 1.mp4" type="video/mp4">
-                    </video>
-                    <figcaption>Video sobre Redes de Computadoras</figcaption>
-                </figure></center>
+                <div style="text-align: center;">
+                    <figure>
+                        <video width="520" height="440" controls>
+                            <source src="Redes_1.mp4" type="video/mp4">
+                        </video>
+                        <figcaption>Video sobre Redes de Computadoras</figcaption>
+                    </figure>
+                </div>
                 <br>
                 <br>
                 <a href="https://www.tokioschool.com/noticias/historia-evolucion-redes-informaticas/">Evolucion de las redes de computadoras</a>
