--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="Formulario_Topologia_de_redes.html">Formulario de redes de computadora</a></li>
-                    <li><a href="Funcionamiento_de_las_redes.html">Funcionamiento de las redes de computadora</a></li>
+                    <li><a href="Funcionamiento_de_las_redes.html"> Funcionamiento de las redes</a></li>
                     <li><a href="#tipos">Tipos de redes de computadoras</a></li>
                 </ul>
             </nav>
@@ -41,16 +41,6 @@
                         <div class="separator separator3"></div>
                     </div>
                 </section>
-
-                <section id="funcionamiento">
-                    <div class="paragraph-container">
-                        <h3>Funcionamiento de las redes de computadora</h3>
-                        <p class="paragraph paragraph4">La red de computadoras permite compartir recursos a distancia, aumenta la velocidad de la transmisión de datos (es más rápido acceder a un archivo por una red que a través de Internet, por ejemplo) e incrementa la confiabilidad. Las computadoras pueden estar interconectadas mediante cable coaxial (que transporta los datos a través de dos conductores concéntricos), cable de par trenzado (los dos conductores concéntricos están entrelazados para reducir las interferencias) o fibra óptica (un hilo muy fino por el que fluyen los pulsos de luz con la información a transmitir).</p>
-                        <p class="paragraph paragraph5">Además, el funcionamiento eficiente de una red depende de diversos elementos clave, como routers, switches, y un cableado estructurado que garantice la conectividad y la transmisión de datos de manera efectiva.</p>
-                        <div class="separator separator4"></div>
-                    </div>
-                </section>
-
                 <section id="tipos">
                     <div class="paragraph-container">
                         <h3>Tipos de redes de computadoras</h3>
@@ -196,4 +186,5 @@
         </main>
     </header>
 </body>
+
 </html>
