--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -19,7 +19,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="Formulario_Topologia_de_redes.html">Formulario de redes de computadora</a></li>
-                    <li><a href="Funcionamiento_de_las_redes.html"> Funcionamiento de las redes</a></li>
+                    <li><a href="Funcionamiento_de_las_redes.html">Funcionamiento de las redes de computadora</a></li>
                     <li><a href="#tipos">Tipos de redes de computadoras</a></li>
                 </ul>
             </nav>
