--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="Formulario_Topologia_de_redes.html">Formulario de redes de computadora</a></li>
-                    <li><a href="Funcionamiento_de_las_redes.html">Funcionamiento de las redes de computadora</a></li>
+                    <li><a href="Formulario Topologia de redes.html">Formulario de redes de computadora</a></li>
+                    <li><a href="Funcionamiento de las redes.html">Funcionamiento de las redes de computadora</a></li>
                     <li><a href="#tipos">Tipos de redes de computadoras</a></li>
                 </ul>
             </nav>
