--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div style="text-align: center;">
                     <figure>
                         <video width="520" height="440" controls>
-                            <source src="Redes_1.mp4" type="video/mp4">
+                            <source src="Redes 1.mp4" type="video/mp4">
                         </video>
                         <figcaption>Video sobre Redes de Computadoras</figcaption>
                     </figure>
