--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <li>Clientes o estaciones de trabajo. Estas son las computadoras que no sirven a las demás, sino que forman parte de la red y brindan acceso a la misma, solicitando los recursos administrados por el servidor.</li>
                         <div style="text-align: center;">
                             <figure>
-                                <img src="estacion_de_trabajo.jpg" width="200" height="200" alt="Estación de Trabajo">
+                                <img src="estacion de trabajo.jpg" width="200" height="200" alt="Estación de Trabajo">
                                 <figcaption>Estación de Trabajo</figcaption>
                             </figure>
                         </div>
