--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <li class="list-item">Redes LAN. Su nombre proviene de Local Area Network (en inglés: “Red de Área Local”), pues son las redes de menor tamaño y extensión, como las que pueden existir entre los computadores de un mismo locutorio o ciber café.</li>
                             <div style="text-align: center;">
                                 <figure>
-                                    <img src="Red_LAN.jpg" width="200" height="200" alt="Red LAN">
+                                    <img src="Red LAN.jpg" width="200" height="200" alt="Red LAN">
                                     <figcaption>Red de Área Local (LAN)</figcaption>
                                 </figure>
                             </div>
